fix: dark mode border contrast

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -33,7 +33,7 @@ body {
     --surface-white: 17 17 17;
     --text-primary: 255 255 255;
     --surface-card: 26 26 26;
-    --border-default: 51 51 51;
+    --border-default: 77 77 77;
     --text-secondary: 156 163 175;
     --text-placeholder: 99 99 99;
     --accent-primary: 85 243 154;
